Image: Fix caption link wrapping in wide/full alignment
Modifies the width property for links within wide and full-width image blocks
from 100% to auto to prevent unintended line breaks in captions.

--- a/packages/block-library/src/image/style.scss
+++ b/packages/block-library/src/image/style.scss
@@ -44,7 +44,7 @@
 
 	&.alignfull a,
 	&.alignwide a {
-		width: 100%;
+		width: auto;
 	}
 
 	&.alignfull img,
